--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="matrix-box">
+    <div class="matrix">
       <img src="./eisenhower-matrix.jpg">
       <a class="more-inf"
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
@@ -14,7 +14,7 @@
     <div class="todo-box">
       <p id="add-element">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
