--- a/index.html
+++ b/index.html
@@ -5,50 +5,50 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="matrix-img" src="./eisenhower-matrix.jpg">
       <a class="more-inf"
         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="todo-box">
       <p id="add-element">
-        <label for="new-task">Add Item</label>
+        <label class="new-task-name" for="new-task">Add Item</label>
         <div class="wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <input class="task task-input" id="new-task" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-name">Todo</h3>
+      <ul class="task-items" id="incomplete-tasks">
+        <li class="task-item">
+          <input class="checkbox" type="checkbox">
+          <label class="task-name">Pay Bills</label>
+          <input class="task-input" type="text">
+          <button class="btn btn-edit">Edit</button>
+          <button class="btn btn-delete">
+            <img class="remove-img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg">
+        <li class="task-item edit-mode">
+          <input class="checkbox" type="checkbox">
+          <label class="task-name">Go Shopping</label>
+          <input class="task-input" type="text" value="Go Shopping">
+          <button class="btn btn-edit">Save</button>
+          <button class="btn btn-delete">
+            <img class="remove-img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg">
+      <h3 class="section-name">Completed</h3>
+      <ul class="task-items" id="completed-tasks">
+        <li class="task-item">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="task-name">See the Doctor</label>
+          <input class="task-input" type="text">
+          <button class="btn btn-edit">Edit</button>
+          <button class="btn btn-delete">
+            <img class="remove-img" src="./remove.svg">
           </button>
         </li>
       </ul>
