refactor(advanced-1.2): add alt for multimedia

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main class="main">
       <section class="matrix">
         <h1 class="title">ToDo App</h1>
-        <img class="matrix-img" src="./eisenhower-matrix.jpg">
+        <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
         <a class="more-inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </section>
@@ -31,7 +31,7 @@
               <input class="task-input" type="text">
               <button class="btn btn-edit">Edit</button>
               <button class="btn btn-delete">
-                <img class="remove-img" src="./remove.svg">
+                <img class="remove-img" src="./remove.svg" alt="remove-icon">
               </button>
             </li>
             <li class="task-item edit-mode">
@@ -40,7 +40,7 @@
               <input class="task-input" type="text" value="Go Shopping">
               <button class="btn btn-edit">Save</button>
               <button class="btn btn-delete">
-                <img class="remove-img" src="./remove.svg">
+                <img class="remove-img" src="./remove.svg" alt="remove-icon">
               </button>
             </li>
           </ul>
@@ -54,7 +54,7 @@
               <input class="task-input" type="text">
               <button class="btn btn-edit">Edit</button>
               <button class="btn btn-delete">
-                <img class="remove-img" src="./remove.svg">
+                <img class="remove-img" src="./remove.svg" alt="remove-icon">
               </button>
             </li>
           </ul>
