--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img class="item-list__img" src="./remove.svg" alt="remove-icon">
               </button>
             </li>
-            <li class="list__item item-list item-list__edit-mode">
+            <li class="list__item item-list item-list_edit-mode">
               <input class="item-list__checkbox" type="checkbox">
               <label class="item-list__name">Go Shopping</label>
               <input class="item-list__input" type="text" value="Go Shopping">
